--- a/src/Post/Reactions/reactions.css
+++ b/src/Post/Reactions/reactions.css
@@ -1,4 +1,4 @@
 .reactions {
-    display: flex;
-    justify-content: space-between;
+    /* display: flex;
+    justify-content: space-around; */
 }
